--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,8 @@ allprojects {
 }
 
 ext {
+
+    APP_ID = "com.obj.model3d"
     COMPILE_SDK_VERSION = 28
     BUILD_TOOLS_VERSION = "28.0.3"
 
@@ -44,11 +46,14 @@ ext {
     RECYCLER_VIEW_IMP = 'androidx.recyclerview:recyclerview:1.1.0-alpha04'
     IMPLEMENT_CONSTAINT_LAYOUT = 'androidx.constraintlayout:constraintlayout:1.1.3'
     IMPLEMENT_APP_COMPAT = 'androidx.appcompat:appcompat:1.2.0-alpha01'
-    KT_CORE='androidx.core:core-ktx:1.2.0'
+    KT_CORE = 'androidx.core:core-ktx:1.2.0'
 
     SOURCE_COMPATIBILITY = 1.8
     TARGET_COMPATIBILITY = 1.8
     IS_MODEL = true
+
+    ARTIFACTID = "maveLib"
+    mavenPath = "../maven"
 }
 
 task clean(type: Delete) {
