--- a/jpct/build.gradle
+++ b/jpct/build.gradle
@@ -39,18 +39,18 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 
-apply plugin: 'maven'
-
-uploadArchives {
-    repositories.mavenDeployer {
-        //maven 本地文件地址
-        def mavenLib = file(getProperty('mavenPath'))
-        repository(url: "file://${mavenLib.absolutePath}")
-        pom.project {
-            version android.defaultConfig.versionName
-            groupId APP_ID
-            artifactId ARTIFACTID
-        }
-    }
-
-}
+//apply plugin: 'maven'
+//
+//uploadArchives {
+//    repositories.mavenDeployer {
+//        //maven 本地文件地址
+//        def mavenLib = file(getProperty('mavenPath'))
+//        repository(url: "file://${mavenLib.absolutePath}")
+//        pom.project {
+//            version android.defaultConfig.versionName
+//            groupId APP_ID
+//            artifactId ARTIFACTID
+//        }
+//    }
+//
+//}
