--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,8 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation IMPLEMENT_APP_COMPAT
     implementation KT_CORE
-    implementation project(path: ':jpct')
+//    implementation project(path: ':jpct')
+    implementation "com.obj.model3d:maveLib:1.0.0"
 
 
 //    implementation 'com.github.DymanZy:EasyShow3D:1.2'
